<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/profileFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.dz16bottomnavigationview.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/todoFragment"
        android:name="com.example.dz16bottomnavigationview.ui.notifications.NotificationsFragment"
        android:label="@string/todo"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.dz16bottomnavigationview.ui.dashboard.DashboardFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_dashboard" />
</navigation>